			   XPCE ChangeLog
			   ==============

* FIXED: handling of `tree->heighbour_gap' in `list' mode.

* FIXED: `node->move_after' to succeed silently if the node is already the
  last.

* FIXED: redraw problems in class tree (using ->direction: list) when moving
  nodes between branches.

* FIXED: keyboard focus handling in class frame to use ->post_event.  Also
  the source-view of the GUI tracer requires redefining ->post_event rather
  then event (doesn't forward trace-commands).

* MODIFIED: Various aspects of class text_edit_gesture: only activate on
  `click', ignore double-click and ->copy on ->terminate if there is a
  selection.

* ADDED: library(pce_editable_text) to use text_edit_gesture, adding
  selection handling.

* ADDED: Selection management for class text if the text is wrapped.


VERSION 6.2.8, distributed with SWI-Prolog 5.2.8
================================================

* FIXED: MS-Windows: displaying of large cursor for drag-and-drop while the
  underlying window updates.

* ADDED: `frame->sensitive'.  Use this to avoid tooltip (balloon) and the 
  `unclip' windows of library(pce_unclip) to grab the focus from the
  application window.

* MODIFIED: The windowing kernel now invokes `window->post_event' rather than
  `window->event'.  For most applications this just removes bugs, but
  applications that really aim at redefining the window focus and
  event-handling may break.  Such applications should redefine
  ->post_event instead of ->event.

* PORT/MODIFIED: `window->grab_pointer' maintains @grabbed_windows on all
  platform (used to be called @_grabbed_windows and only on X11).

* MODIFIED: `node->delete_tree' now calls ->destroy on the deleted nodes,
  providing guaranteed destruction of the node's <-image.  Application that
  which to preserve the images should detach them from the tree before
  deleting the node.  We believe it is unlikely that any application is
  affected.  Please contact bugs@swi-prolog.org if this change poses